2018-02-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/stream.spad,
	src/algebra/tree.spad: Fix 'leaf?'

2018-02-21  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/mring.spad: Fix 'construct'

2018-02-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-con.boot, src/interp/br-op2.boot,
	src/interp/daase.lisp: Misc clenups

2018-02-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad: Implement missing 'qsetfirst!'
	and 'qsetrest!'

2018-02-21  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Fix 'exquo'

2018-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/eigen.spad: Make exports conditional

2018-02-20  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/poly.spad: Remove unused local 'times!'

2018-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op1.boot: Show conditional operations
	in categories

2018-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pscat.spad: Remove useless signatures

2018-02-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algcat.spad, src/algebra/attribs.spad,
	src/algebra/catdef.spad, src/algebra/matcat.spad
	src/algebra/naalgc.spad: Add default 'leftRecip' and 'rightRecip'
	src/algebra/Makefile.in: Adjust

2018-02-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pfo.spad: Fix division by zero

2018-02-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/catdef.spad, src/algebra/computation.spad,
	src/algebra/graph.spad, src/algebra/logic.spad,
	src/algebra/qalgset.spad: Misc cleanups

2018-02-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/catdef.spad: Implement sensible 'latex'
	src/algebra/logic.spad, src/algebra/scene.spad:
	Remove useless definitions

2018-02-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/allfact.spad, src/algebra/fraction.spad:
	Move 'factorFraction' to Fraction

2018-02-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
