@@ -219,8 +219,8 @@ getUserIdentifiersIn body ==
   body is ["WRAPPED",:.] => nil
   (body is ["COLLECT",:itl,body1]) or (body is ['REPEAT,:itl,body1]) =>
     userIds :=
-      S_+(getUserIdentifiersInIterators itl,getUserIdentifiersIn body1)
-    S_-(userIds,getIteratorIds itl)
+      set_sum(getUserIdentifiersInIterators itl, getUserIdentifiersIn body1)
+    set_difference(userIds, getIteratorIds itl)
   body is [op,:l] =>
     argIdList:= "append"/[getUserIdentifiersIn y for y in l]
     bodyIdList :=
