@@ -1016,16 +1016,34 @@ splitListSayBrightly u ==
 
 -- Output to Character Streams
 
+sayBrightlyNT2(x, str) ==
+    NULL(X) => nil
+    $sayBrightlyStream => sayBrightlyNT1(x, $sayBrightlyStream)
+    sayBrightlyNT1(x, str)
+
 sayBrightlyNT1(x, $fricasOutput) ==
     if x then
         ATOM(x) => brightPrint0(x)
         brightPrint(x)
+
+sayBrightlyNT(x) == sayBrightlyNT2(x, get_lisp_std_out())
+
+sayBrightly2(x, str) ==
+    NULL(X) => nil
+    $sayBrightlyStream => sayBrightly1(x, $sayBrightlyStream)
+    sayBrightly1(x, str)
 
 sayBrightly1(x, str) ==
     if x then
         sayBrightlyNT1(x, str)
         TERPRI(str)
         FORCE_-OUTPUT(str)
+
+sayBrightly(x) == sayBrightly2(x,  get_lisp_std_out())
+
+sayBrightlyI|(x) ==
+    NULL(X) => nil
+    sayBrightly1(x, get_lisp_error_out())
 
 sayMSGNT(x) == sayBrightlyNT1(x, $algebraOutputStream)
 
