@@ -1,3 +1,11 @@
+2018-02-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/c-util.boot, src/interp/category.boot,
+	src/interp/clam.boot, src/interp/functor.boot,
+	src/interp/g-boot.boot, src/interp/i-map.boot,
+	src/interp/macros.lisp, src/interp/msgdb.boot:
+	Misc cleanups
+
 2018-02-24  Qian Yun  <oldk1331@gmail.com>
 
 	* src/algebra/aggcat.spad, src/algebra/stream.spad,
